--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/CookieCredentialSourceAssertionPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/CookieCredentialSourceAssertionPropertiesDialog.form
@@ -70,13 +70,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <vspacer id="6c5d">
-            <constraints>
-              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="24"/>
-              </grid>
-            </constraints>
-          </vspacer>
           <hspacer id="3e7f7">
             <constraints>
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
@@ -115,6 +108,23 @@
               </grid>
             </constraints>
           </hspacer>
+          <grid id="a44b6" binding="variablePrefixPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
+          <component id="74ed7" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Variable Prefix:"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
